vim-6.0f (tag vim-6-0f) --> vim-6.0g (tag vim-6-0g)

--- a/src/INSTALL
+++ b/src/INSTALL
@@ -11,7 +11,8 @@ Contents:
 5. OS/2 (with EMX 0.9b)
 6. Atari MiNT
 
-For BeBox see doc/os_bebox.txt.
+For OS/390 Unix see ../runtime/doc/os_390.txt
+For BeBox see ../runtime/doc/os_bebox.txt.
 For Amiga see INSTALLami.txt
 For PC (MS-DOS, Windows NT, Windows 95) see INSTALLpc.txt
 For Macintosh see INSTALLmac.txt
