--- a/src/po/zh_TW.po
+++ b/src/po/zh_TW.po
@@ -4059,12 +4059,12 @@ msgid "cannot yank; delete anyway"
 msgstr "無法剪下; 直接刪除"
 
 #: ops.c:2018
-msgid "1 line ~ed"
+msgid "1 line changed"
 msgstr " 1 行 ~ed"
 
 #: ops.c:2020
 #, c-format
-msgid "%ld lines ~ed"
+msgid "%ld lines changed"
 msgstr " %ld 行 ~ed"
 
 #: ops.c:2381
