--- a/src/po/pl.po
+++ b/src/po/pl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: Marcin Dalecki <dalecki@cs.net.pl>\n"
 "Language-Team: Marcin Dalecki <dalecki@cs.net.pl>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: buffer.c:98
